src/App.css
html body {
  background-color: #7091b3;
  margin: 2%;
  display: flex;
  width: 96%;
}

#root {
  width: 100%;
}

.banner {
  display: flex;
  height: 150px;
  width: 100%;
}

.banner-text {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  width: 100%;
  font-size: 2.5em;
}

.logo-img {
  display: flex;
  align-self: center;
  height: 140px;
  width: 140px;
  margin: 1%;
  border: 2px solid;
  border-color: black;
}

.main {
  flex-direction: column;
  align-content: center;
  text-align: center;
}

.sow {
  display: flex;
  width: 100%;
  justify-content: center;
}

.sow-text {
  font-size: 64px;
  font-variant-caps: petite-caps;
  font-weight: bolder;
}

.videos {
  justify-content: center;
  display: flex;
  flex-wrap: wrap;
}

.video-card {
  margin: 2%;
  padding: 0.75%;
}

.video-card img {
  width: 94%;
  margin: 1%;
  padding: 2%;
  background-color: #445261;
}

.video-title {
  text-align: center;
}

.video-player {
  display: flex;
  width: 94%;
  margin: 1%;
  padding: 2%;
  background-color: #445261;
}

.grade .button {
  width: 50px;
  height: 50px;
  color: black;
}

.buttons-div {
  display: flex;
  align-items: center;
  justify-content: center;
}

.router {
  display: flex;
}

.nav-bar {
  min-width: 130px;
  max-width: 200px;
  justify-content: left;
}

.routes {
  display: flex;
  width: 90%;
  align-content: center;
  justify-content: center;
}

.nav-button {
  font-family: "Courier New";
  border: 5px solid;
  border-radius: 50px;
  border-color: black;
  font-size: 22px;
  font-weight: bolder;
  color: black;
  margin: 15px 0px;
  padding: 15px;
  width: 90%;
  min-width: 130px;
  height: 100px;
  width: 200px;
  text-align: center;
}


.link-button {
  font-family: "Courier New";
  border: 8px solid;
  border-radius: 56px;
  border-color: black;
  font-size: 28px;
  font-weight: bolder;
  color: black;
  margin: 20px;
  padding: 15px;
  width: 200px;
  height: 200px;
  text-align: center;
}

.video-filter-container {
  text-align: center;
}

button text {
  position: absolute;
  width: 100%;
  height: 100%;
}

button.orange {
  background: #f08c00;
}

button.green {
  background: #15c206;
}

button.red {
  background: #e31c0e;
}

button.black {
  background: black;
  color: white;
}

.about {
  border-width: 2px 2px 0px 2px;
  border-style: solid;
  border-color: #b1c1c7;
  border-radius: 15px;
  margin: 2%;
  padding: 2%;
}

.about h1 {
  text-align: center;
  font-size: 36px;
}

.about p {
  text-align: left;
  font-size: 24px;
  margin: 2%;
}

